# aps-ai-transparency-tracker

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  CLAUDE.md  README.md  agencies.toml  cron-scrape.sh  departments.toml  get_failing_agencies.py  index.html  mise.toml  pyproject.toml  scrape_ai_statements.py  test_export.py  test_scraper.py
.cache/: embeddings.json
.claude/skills/scrape/: SKILL.md
.github/workflows/: deploy.yml  scrape.yml
backlog/: config.yml
backlog/tasks/: task-1 - Python-Best-Practices-Audit-Results.md  task-1 - audit-results.md  task-2 - parallelise-fetch.md  task-3 - add-heuristics-to-remove-boilerplate.md  task-4 - detect-insignificant-changes-and-don't-commit.md  task-5 - remove-social-links.md  task-6 - Data-viz-pages-render-at-~25-scale-in-headless-screenshots.md  task-7 - Mint-a-Zenodo-DOI-via-the-GitHub-release-pathway.md
ops/systemd/: aps-scrape.timer
site/: .oxfmtrc.json  astro.config.mjs  astro.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  stylelint.config.mjs  tsconfig.json
site/src/: content.config.ts
src/aps_ai_transparency_tracker/: __init__.py  __main__.py  export.py  process.py  process_manual.py  scraper.py  status.py
statements/: AASB.md  ABS.md  ACCC.md  ACIAR.md  ACMA.md  ACQSC.md  ACSQHC.md  ADHA.md  AEC.md  AFA.md  AFMA.md  AFP.md  AFSA.md  AGD.md  AIC.md  AIFS.md  AIHW.md  ALRC.md  AMSA.md  ANAO.md  ANMM.md  AOFM.md  APRA.md  APSC.md  ARC.md  ARPANSA.md  ARPC.md  ART.md  ASIC.md  ASIO.md  ASQA.md  ASSEA.md  ATO.md  ATSB.md  AUASB.md  AUSTRAC.md  AUSTRADE.md  BOM.md  CCA.md  CDC.md  (+76 more)
(+42 files in other folders)
