[project]
name = "ausgov-ai-transparency-statements"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ben Swift", email = "ben@benswift.me" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pypdf>=5.1.0",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]
