[project]
name = "aps-ai-transparency-tracker"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ben Swift", email = "ben@benswift.me" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pypdf>=5.1.0",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project.scripts]
scrape = "aps_ai_transparency_tracker.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.14.4",
]

[tool.pytest.ini_options]
addopts = "-n auto -m 'not might_fail'"
markers = [
    "might_fail: marks tests that may fail due to missing URLs or external issues (deselected by default)",
]
